Added divs and three buttons

--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Console RPS Game</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <script src="app.js"></script>
+    <div class="header"></div>
+    <div class="container">
+      <div class="btnContainer">
+        <button id="rockBtn">Rock</button>
+      </div>
+      <div class="btnContainer">
+        <button id="paperBtn">Paper</button>
+      </div>
+      <div class="btnContainer">
+        <button id="scissorsBtn">Scissors</button>
+      </div>
+    </div>
   </body>
+  <script src="app.js"></script>
 </html>
